# Efficient-LLMs

./: .gitignore  README.md  claude_session.md  fix_bug_ideas.md  hang_bug_ideas.md  hanging_run_out.txt  other_potential_bugs.md  pyproject.toml  requirements.txt  setup_and_test.pbs  test_distillation.py  train_hanging_bug.md
apps/main/: args.py  dim_transformer.py  direct_count.py  eval.py  factorised_embeddings.py  generate.py  rrt.py  train.py  transformer.py
configs/: 125m_baseline_mark.yaml  40m_baseline_mark.yaml  40m_baseline_mark_8gpu.yaml  4gpu_nolog.yaml  70m_frozen_attn.yaml  baseline_smallbatch.yaml  debug_mark.yaml  new_debug.yaml  path_updater.py  proj_baseline.yaml  proj_firstrun.yaml  rrt_debug_0.yaml  rrt_debug_1.yaml  rrt_debug_2.yaml  rrt_debug_hierarch.yaml  shared_match_params_8gpu.yaml
configs/attn_share_exps/: baseline.yaml  kv_share.yaml  more_groups.yaml  more_rank.yaml  qk_share.yaml  qkv_heads.yaml  qkv_heads_2step.yaml  qkv_share.yaml  qv_share.yaml  rank_128.yaml  rank_16.yaml  rank_32.yaml  rank_4.yaml  rank_64.yaml  unshared_baseline.yaml
configs/distill_exps/: debug.yaml
configs/lora_moe_exps/: all_ffn.yaml  debug.yaml  (+3 more)
crappy_scripts/: setup.pbs  setup2.pbs
lingua/: checkpoint.py  data.py  distributed.py  lora_moe.py  profiling.py  shared_attn.py  tokenizer.py  transformer.py
scripts/: add_count_wandb.py  copy_count_wandb.py  data10bt.pbs  debug_multi_gpu.pbs  debug_single_gpu.pbs  download_hf_data.pbs  param_counter.py  router_measure.py  test_run.pbs  update_count_wandb.py
setup/: create_env.sh  download_prepare_hf_data.py
(+47 files in other folders)
